--- a/index.html
+++ b/index.html
@@ -10,7 +10,25 @@
 </head>
 
 <body>
-
+    <header class="header-bg">
+        <div class="header">
+            <a href="./" class="header-logo">
+                <img src="/img-icone/icone-roxo/Plushy.svg" alt="Plushy">
+            </a>
+            <nav aria-label="primaria">
+                <ul class="header-menu">
+                    <li><a href="./comissoes.html">Comissões</a></li>
+                    <li><a href="./pelucias.html">Pelúcias</a></li>
+                    <li><a href="./croche.html">Crochê</a></li>
+                    <li><a href="./contato.html">Contato</a></li>
+                </ul>
+            </nav>
+            <div class="header-extra">
+                <img src="/img-icone/icone-roxo/perfil.svg" alt="perfil">
+                <img src="/img-icone/icone-roxo/carrinho.svg" alt="carrinho">
+            </div>
+        </div>
+    </header>
 </body>
 
 </html>
