header-intro-final

--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Plushy - Pelúcias Customizadas</title>
     <meta name="description" content="Somos profissionais quando o assunto é pelúcias customizadas. Nos mostre seu design e traremos à vida suas melhores criações.">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/css/style.css">
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Grandstander:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet"> -->
 </head>
 
 <body>
@@ -24,11 +27,25 @@
                 </ul>
             </nav>
             <div class="header-extra">
-                <img src="/img-icone/icone-roxo/perfil.svg" alt="perfil">
-                <img src="/img-icone/icone-roxo/carrinho.svg" alt="carrinho">
+                <a href="/"><img src="/img-icone/icone-roxo/perfil.svg" alt="perfil"></a>
+                <a href="/"><img src="/img-icone/icone-roxo/carrinho.svg" alt="carrinho"></a>
             </div>
         </div>
     </header>
+
+    <main class="introducao-bg">
+        <div class="introducao">
+            <div>
+                <img src="/img/geral/img-intro.svg" alt="imagem animais fofos">
+            </div>
+            <div class="introducao-conteudo">
+                <h1>Suas pelúcias do seu jeito</h1>
+                <p>Somos profissionais quando o assunto é pelúcias customizadas. Nos mostre seu design e traremos à vida suas melhores criações.</p>
+                <a class="botao" href="./customizacao.html">Crie com a gente</a>
+            </div>
+        </div>
+
+    </main>
 </body>
 
 </html>
