--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
                 <img src="/img/geral/img-intro.svg" alt="imagem animais fofos">
             </div>
             <div class="introducao-conteudo">
-                <h1>Suas pelúcias do seu jeito</h1>
-                <p>Somos profissionais quando o assunto é pelúcias customizadas. Nos mostre seu design e traremos à vida suas melhores criações.</p>
+                <h1 class="titulo roxo-titulo">Suas pelúcias do seu jeito</h1>
+                <p class="subtitulo roxo-subtitulo">Somos profissionais quando o assunto é pelúcias customizadas. Nos mostre seu design e traremos à vida suas melhores criações.</p>
                 <a class="botao" href="./customizacao.html">Crie com a gente</a>
             </div>
         </div>
