busca+inicio-pelucias-home

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
             </a>
             <nav aria-label="primaria">
                 <ul class="header-menu">
-                    <li><a href="./comissoes.html">Comissões</a></li>
-                    <li><a href="./pelucias.html">Pelúcias</a></li>
-                    <li><a href="./croche.html">Crochê</a></li>
-                    <li><a href="./contato.html">Contato</a></li>
+                    <li><a class="item-menu" href="./comissoes.html">Comissões</a></li>
+                    <li><a class="item-menu" href="./pelucias.html">Pelúcias</a></li>
+                    <li><a class="item-menu" href="./croche.html">Crochê</a></li>
+                    <li><a class="item-menu" href="./contato.html">Contato</a></li>
                 </ul>
             </nav>
             <div class="header-extra">
@@ -32,20 +32,35 @@
             </div>
         </div>
     </header>
-
-    <main class="introducao-bg">
-        <div class="introducao">
-            <div>
-                <img src="/img/geral/img-intro.svg" alt="imagem animais fofos">
+    <div class="introducao-fundo">
+        <main class="introducao-bg">
+            <div class="introducao">
+                <div>
+                    <img src="/img/geral/img-intro.svg" alt="imagem animais fofos">
+                </div>
+                <div class="introducao-conteudo">
+                    <h1 class="titulo">Suas pelúcias do seu jeito</h1>
+                    <p class="subtitulo">Somos profissionais quando o assunto é pelúcias customizadas. Nos mostre seu design e traremos à vida suas melhores criações.</p>
+                    <a class="botao" href="./customizacao.html">Crie com a gente</a>
+                </div>
             </div>
-            <div class="introducao-conteudo">
-                <h1 class="titulo roxo-titulo">Suas pelúcias do seu jeito</h1>
-                <p class="subtitulo roxo-subtitulo">Somos profissionais quando o assunto é pelúcias customizadas. Nos mostre seu design e traremos à vida suas melhores criações.</p>
-                <a class="botao" href="./customizacao.html">Crie com a gente</a>
-            </div>
-        </div>
+        </main>
+    </div>
 
-    </main>
+    <div class="busca-fundo">
+        <section class="busca-bg">
+            <form class="busca">
+                <input type="search" placeholder="Busque no site..." />
+                <button type="submit"></button>
+            </form>
+        </section>
+    </div>
+
+    <section class="pelucias-home-bg">
+        <h2 class="titulo">Conheça nossas Pelúcias</h2>
+    </section>
+
+
 </body>
 
 </html>
