home-pelucias-inicial

--- a/index.html
+++ b/index.html
@@ -57,7 +57,28 @@
     </div>
 
     <section class="pelucias-home-bg">
-        <h2 class="titulo">Conheça nossas Pelúcias</h2>
+        <div class="pelucias-home">
+            <h2 class="titulo">Conheça nossas<br>Pelúcias</h2>
+            <div class="pelucias-selecao">
+                <div class="pelucias-home-quadrado">
+                    <img src="/img/geral/img-urso.jpg" alt="Pelúcia Urso Marrom">
+                    <p class="produto-preco preco-titulo">Pelúcia Urso</p>
+                    <p class="produto-valor preco-valor">R$59.90</p>
+                </div>
+
+                <div class="pelucias-home-quadrado">
+                    <img src="/img/geral/img-polvo.jpg" alt="Pelúcia Polvo Colorido">
+                    <p class="produto-preco preco-titulo">Pelúcia Polvo</p>
+                    <p class="produto-valor preco-valor">R$29.90</p>
+                </div>
+
+                <div class="pelucias-home-quadrado">
+                    <img src="/img/geral/img-cachorro.jpg" alt="Pelúcia Cachorro Shiba-Inu">
+                    <p class="produto-preco preco-titulo">Pelúcia Cachorro</p>
+                    <p class="produto-valor preco-valor">R$59.90</p>
+                </div>
+            </div>
+        </div>
     </section>
 
 
