--- a/index.html
+++ b/index.html
@@ -56,30 +56,36 @@
         </section>
     </div>
 
-    <section class="pelucias-home-bg">
+    <article class="pelucias-home-bg">
         <div class="pelucias-home">
             <h2 class="titulo">Conheça nossas<br>Pelúcias</h2>
-            <div class="pelucias-selecao">
-                <div class="pelucias-home-quadrado">
-                    <img src="/img/geral/img-urso.jpg" alt="Pelúcia Urso Marrom">
-                    <p class="produto-preco preco-titulo">Pelúcia Urso</p>
-                    <p class="produto-valor preco-valor">R$59.90</p>
-                </div>
+            <ul class="pelucias-selecao">
+                <li class="pelucias-home-quadrado">
+                    <a href="./pelucias.html">
+                        <img src="/img/geral/img-urso.jpg" alt="Pelúcia Urso Marrom">
+                        <h3 class="produto-preco preco-titulo">Pelúcia Urso</h3>
+                        <p class="produto-valor preco-valor">R$59.90</p>
+                    </a>
+                </li>
 
-                <div class="pelucias-home-quadrado">
-                    <img src="/img/geral/img-polvo.jpg" alt="Pelúcia Polvo Colorido">
-                    <p class="produto-preco preco-titulo">Pelúcia Polvo</p>
-                    <p class="produto-valor preco-valor">R$29.90</p>
-                </div>
+                <li class="pelucias-home-quadrado">
+                    <a href="./pelucias.html">
+                        <img src="/img/geral/img-polvo.jpg" alt="Pelúcia Polvo Colorido">
+                        <h3 class="produto-preco preco-titulo">Pelúcia Polvo</h3>
+                        <p class="produto-valor preco-valor">R$29.90</p>
+                    </a>
+                </li>
 
-                <div class="pelucias-home-quadrado">
-                    <img src="/img/geral/img-cachorro.jpg" alt="Pelúcia Cachorro Shiba-Inu">
-                    <p class="produto-preco preco-titulo">Pelúcia Cachorro</p>
-                    <p class="produto-valor preco-valor">R$59.90</p>
-                </div>
-            </div>
+                <li class="pelucias-home-quadrado">
+                    <a href="./pelucias.html">
+                        <img src="/img/geral/img-cachorro.jpg" alt="Pelúcia Cachorro Shiba-Inu">
+                        <h3 class="produto-preco preco-titulo">Pelúcia Cachorro</h3>
+                        <p class="produto-valor preco-valor">R$59.90</p>
+                    </a>
+                </li>
+            </ul>
         </div>
-    </section>
+    </article>
 
 
 </body>
