pelucias-home-final

--- a/index.html
+++ b/index.html
@@ -79,8 +79,16 @@
                 <li class="pelucias-home-quadrado">
                     <a href="./pelucias.html">
                         <img src="/img/geral/img-cachorro.jpg" alt="Pelúcia Cachorro Shiba-Inu">
-                        <h3 class="produto-preco preco-titulo">Pelúcia Cachorro</h3>
+                        <h3 class="produto-preco preco-titulo">Pelúcia Shiba</h3>
                         <p class="produto-valor preco-valor">R$59.90</p>
+                    </a>
+                </li>
+
+                <li class="pelucias-home-quadrado">
+                    <a href="./pelucias.html">
+                        <img src="/img/geral/img-leao.jpg" alt="Pelúcia Leão">
+                        <h3 class="produto-preco preco-titulo">Pelúcia Leão</h3>
+                        <p class="produto-valor preco-valor">R$49.90</p>
                     </a>
                 </li>
             </ul>
