detalhes-custom-inicial

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <header class="header-bg">
-        <div class="header">
+        <div class="header container">
             <a href="./" class="header-logo">
                 <img src="/img-icone/icone-roxo/Plushy.svg" alt="Plushy">
             </a>
@@ -34,7 +34,7 @@
     </header>
     <div class="introducao-fundo">
         <main class="introducao-bg">
-            <div class="introducao">
+            <div class="introducao container">
                 <div>
                     <img src="/img/geral/img-intro.svg" alt="imagem animais fofos">
                 </div>
@@ -93,6 +93,22 @@
                 </li>
             </ul>
         </div>
+    </article>
+
+    <div class="detalhes-custom-fundo">
+        <article class="detalhes-custom-bg">
+            <div class="detalhes-custom">
+                <div class="detalhes-custom-conteudo">
+                    <h2 class="titulo">Você escolhe as<br>cores e materiais,<br>e a gente faz!</h2>
+                    <p class="subtitulo">Nossas pelúcias tradicionais também podem ser custozimadas! Prefere um jacaré de pelúcia azul ao invés de verde? Tem uma preferência por um tecido exterior ou enchimento específico? Materiais 100% hipoalergênicos para você ter toda a liberdade na<br>hora da escolha.</p>
+                    <a class="saiba-mais" href="./customizacao.html">Saiba mais</a>
+                </div>
+                <div class="detalhes-custom-imagem">
+                    <img src="/img/geral/img-lagarto.jpg" alt="">
+                </div>
+            </div>
+    </div>
+
     </article>
 
 
