--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             </div>
         </div>
     </header>
+
     <div class="introducao-fundo">
         <main class="introducao-bg">
             <div class="introducao container">
@@ -47,69 +48,111 @@
         </main>
     </div>
 
-    <div class="busca-fundo">
-        <section class="busca-bg">
-            <form class="busca">
-                <input type="search" placeholder="Busque no site..." />
-                <button type="submit"></button>
-            </form>
-        </section>
+    <section class="busca-bg">
+        <form class="busca">
+            <input type="search" placeholder="Busque no site..." />
+            <button type="submit"></button>
+        </form>
+    </section>
+
+    <div class="pelucias-home">
+        <h2 class="titulo">Conheça nossas<br>Pelúcias</h2>
+        <ul class="pelucias-selecao">
+            <li class="pelucias-home-quadrado">
+                <a href="./pelucias-urso.html">
+                    <img src="/img/geral/img-urso.jpg" alt="Pelúcia Urso Marrom">
+                    <h3 class="produto-preco preco-titulo">Pelúcia Urso</h3>
+                    <p class="produto-valor preco-valor">R$59.90</p>
+                </a>
+            </li>
+
+            <li class="pelucias-home-quadrado">
+                <a href="./pelucias.html">
+                    <img src="/img/geral/img-polvo.jpg" alt="Pelúcia Polvo Colorido">
+                    <h3 class="produto-preco preco-titulo">Pelúcia Polvo</h3>
+                    <p class="produto-valor preco-valor">R$29.90</p>
+                </a>
+            </li>
+
+            <li class="pelucias-home-quadrado">
+                <a href="./pelucias.html">
+                    <img src="/img/geral/img-cachorro.jpg" alt="Pelúcia Cachorro Shiba-Inu">
+                    <h3 class="produto-preco preco-titulo">Pelúcia Shiba</h3>
+                    <p class="produto-valor preco-valor">R$59.90</p>
+                </a>
+            </li>
+
+            <li class="pelucias-home-quadrado">
+                <a href="./pelucias.html">
+                    <img src="/img/geral/img-leao.jpg" alt="Pelúcia Leão">
+                    <h3 class="produto-preco preco-titulo">Pelúcia Leão</h3>
+                    <p class="produto-valor preco-valor">R$49.90</p>
+                </a>
+            </li>
+        </ul>
     </div>
 
-    <article class="pelucias-home-bg">
-        <div class="pelucias-home">
-            <h2 class="titulo">Conheça nossas<br>Pelúcias</h2>
-            <ul class="pelucias-selecao">
-                <li class="pelucias-home-quadrado">
-                    <a href="./pelucias.html">
-                        <img src="/img/geral/img-urso.jpg" alt="Pelúcia Urso Marrom">
-                        <h3 class="produto-preco preco-titulo">Pelúcia Urso</h3>
-                        <p class="produto-valor preco-valor">R$59.90</p>
-                    </a>
-                </li>
-
-                <li class="pelucias-home-quadrado">
-                    <a href="./pelucias.html">
-                        <img src="/img/geral/img-polvo.jpg" alt="Pelúcia Polvo Colorido">
-                        <h3 class="produto-preco preco-titulo">Pelúcia Polvo</h3>
-                        <p class="produto-valor preco-valor">R$29.90</p>
-                    </a>
-                </li>
-
-                <li class="pelucias-home-quadrado">
-                    <a href="./pelucias.html">
-                        <img src="/img/geral/img-cachorro.jpg" alt="Pelúcia Cachorro Shiba-Inu">
-                        <h3 class="produto-preco preco-titulo">Pelúcia Shiba</h3>
-                        <p class="produto-valor preco-valor">R$59.90</p>
-                    </a>
-                </li>
-
-                <li class="pelucias-home-quadrado">
-                    <a href="./pelucias.html">
-                        <img src="/img/geral/img-leao.jpg" alt="Pelúcia Leão">
-                        <h3 class="produto-preco preco-titulo">Pelúcia Leão</h3>
-                        <p class="produto-valor preco-valor">R$49.90</p>
-                    </a>
-                </li>
-            </ul>
+    <article class="detalhes-custom-bg">
+        <div class="detalhes-custom">
+            <div class="detalhes-custom-conteudo">
+                <h2 class="titulo">Você escolhe as cores e materiais,<br>e a gente faz!</h2>
+                <p class="subtitulo">Nossas pelúcias tradicionais também podem ser custozimadas! Prefere um jacaré de pelúcia azul ao invés de verde? Tem uma preferência por um tecido exterior ou enchimento específico? Materiais 100% hipoalergênicos para você ter toda a liberdade na hora da escolha.</p>
+                <a class="saiba-mais" href="./customizacao.html">Saiba mais</a>
+            </div>
+            <div class="detalhes-custom-imagem">
+                <img src="/img/geral/img-lagarto.jpg" alt="">
+            </div>
         </div>
     </article>
 
-    <div class="detalhes-custom-fundo">
-        <article class="detalhes-custom-bg">
-            <div class="detalhes-custom">
-                <div class="detalhes-custom-conteudo">
-                    <h2 class="titulo">Você escolhe as cores e materiais,<br>e a gente faz!</h2>
-                    <p class="subtitulo">Nossas pelúcias tradicionais também podem ser custozimadas! Prefere um jacaré de pelúcia azul ao invés de verde? Tem uma preferência por um tecido exterior ou enchimento específico? Materiais 100% hipoalergênicos para você ter toda a liberdade na hora da escolha.</p>
-                    <a class="saiba-mais" href="./customizacao.html">Saiba mais</a>
-                </div>
-                <div class="detalhes-custom-imagem">
-                    <img src="/img/geral/img-lagarto.jpg" alt="">
-                </div>
-            </div>
-        </article>
+    <div class="croche-home">
+        <h2 class="titulo">Nossos amores<br>em forma de Crochê</h2>
+        <ul class="croche-selecao">
+            <li class="croche-home-quadrado">
+                <a href="./croche-coelho.html">
+                    <img src="/img/geral/img-croche1.jpg" alt="Crochê rena">
+                    <h3 class="produto-preco preco-titulo">Crochê Rena</h3>
+                    <p class="produto-valor preco-valor">R$49.90</p>
+                </a>
+            </li>
+
+            <li class="croche-home-quadrado">
+                <a href="./croche.html">
+                    <img src="/img/geral/img-croche2.jpg" alt="Crochê coelho">
+                    <h3 class="produto-preco preco-titulo">Crochê Coelho</h3>
+                    <p class="produto-valor preco-valor">R$49.90</p>
+                </a>
+            </li>
+
+            <li class="croche-home-quadrado">
+                <a href="./croche.html">
+                    <img src="/img/geral/img-croche3.jpg" alt="Crochê cacto">
+                    <h3 class="produto-preco preco-titulo">Crochê Cacto</h3>
+                    <p class="produto-valor preco-valor">R$49.90</p>
+                </a>
+            </li>
+
+            <li class="croche-home-quadrado">
+                <a href="./croche.html">
+                    <img src="/img/geral/img-croche4.jpg" alt="Crochê boneca">
+                    <h3 class="produto-preco preco-titulo">Crochê Boneca</h3>
+                    <p class="produto-valor preco-valor">R$49.90</p>
+                </a>
+            </li>
+        </ul>
     </div>
 
+    <section class="depoimento" aria-label="Depoimento">
+        <div>
+            <img src="/img/geral/img-crianca.jpg" alt="Criança com uma pelúcia Plushy">
+        </div>
+        <div class="depoimento-conteudo">
+            <blockquote>
+                <p class="depoimento-descricao">Foi um sonho poder trazer os desenhos da minha filha para a realidade; ficamos muito satisfeitos com todos os detalhes e os materiais são super macios.</p>
+            </blockquote>
+            <p class="depoimento-nome">Ana, cliente da Plushy</p>
+        </div>
+    </section>
 </body>
 
 </html>
