--- a/index.html
+++ b/index.html
@@ -153,6 +153,44 @@
             <p class="depoimento-nome">Ana, cliente da Plushy</p>
         </div>
     </section>
+
+    <footer class="footer-bg">
+        <div class="footer container">
+            <img src="/img-icone/icone-rosa/Plushy-branco.svg" alt="Plushy">
+            <div class="footer-contato">
+                <h2 class="footer-titulo">Contato</h2>
+                <ul class="footer-descricao">
+                    <li><a href="tel:+55999999999">+55 (99) 99999-9999</a></li>
+                    <li><a href="mailto:contato@plushy.com">contato@plushy.com</a></li>
+                    <li>De segunda à sexta, das 9h às 17h</li>
+                </ul>
+                <ul class="footer-descricao">
+                    <li>Rua dos Bobos, nº 0 - Algum Bairro</li>
+                    <li>Cidade - Estado Qualquer</li>
+                </ul>
+                <div class="footer-descricao-icones">
+                    <a href="./"><img src="/img-icone/icone-rosa/instagram.svg" alt="Instagram Plushy"></a>
+                    <a href="./"><img src="/img-icone/icone-rosa/facebook.svg" alt="Facebook Plushy"></a>
+                    <a href="./"><img src="/img-icone/icone-rosa/twitter.svg" alt="Twitter Plushy"></a>
+                </div>
+            </div>
+            <div class="footer-informacoes">
+                <h2 class="footer-titulo">Informações</h2>
+                <nav>
+                    <ul class="footer-descricao">
+                        <li><a href="./comissoes.html">Comissões</a></li>
+                        <li><a href="./pelucias.html">Pelúcias</a></li>
+                        <li><a href="./croche.html">Crochê</a></li>
+                        <li><a href="./contato.html">Contato</a></li>
+                        <li><a href="./">Minha Conta</a></li>
+                        <li><a href="./">Carrinho</a></li>
+                        <li><a href="./termos-condicoes.html">Termos e Condições</a></li>
+                    </ul>
+                </nav>
+            </div>
+            <p class="footer-descricao">Plushy © Alguns direitos reservados.</p>
+        </div>
+    </footer>
 </body>
 
 </html>
