--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <div class="detalhes-custom-conteudo">
                 <h2 class="titulo">Você escolhe as cores e materiais,<br>e a gente faz!</h2>
                 <p class="subtitulo">Nossas pelúcias tradicionais também podem ser custozimadas! Prefere um jacaré de pelúcia azul ao invés de verde? Tem uma preferência por um tecido exterior ou enchimento específico? Materiais 100% hipoalergênicos para você ter toda a liberdade na hora da escolha.</p>
-                <a class="saiba-mais" href="./customizacao.html">Saiba mais</a>
+                <a class="saiba-mais" href="./pelucias.html">Saiba mais</a>
             </div>
             <div class="detalhes-custom-imagem">
                 <img src="/img/geral/img-lagarto.jpg" alt="">
