--- a/index.html
+++ b/index.html
@@ -156,7 +156,9 @@
 
     <footer class="footer-bg">
         <div class="footer container">
-            <img src="/img-icone/icone-rosa/Plushy-branco.svg" alt="Plushy">
+            <a href="./" class="footer-logo">
+                <img src="/img-icone/icone-rosa/Plushy-branco.svg" alt="Plushy">
+            </a>
             <div class="footer-contato">
                 <h2 class="footer-titulo">Contato</h2>
                 <ul class="footer-descricao">
