add-paseudo-element

--- a/pelucias.html
+++ b/pelucias.html
@@ -50,7 +50,7 @@
                     <div class="pelucias-conteudo">
                         <h2 class="preco-titulo">Pelúcia Urso</h2>
                         <p class="preco-valor">R$59.90</p>
-                        <p class="preco-descricao">Pelúcia de urso peludo na cor marrom, confeccionado artesanalmente em tecido Toronto Super Soft, com enchimento de Silicone Extra Virgem Macio (tufos ou micropérola).</p>
+                        <p class="preco-descricao pelucias-decoracao-1">Pelúcia de urso peludo na cor marrom, confeccionado artesanalmente em tecido Toronto Super Soft, com enchimento de Silicone Extra Virgem Macio (tufos ou micropérola).</p>
                         <div class="pelucias-botao">
                             <a class="botao" href="./pelucias-urso.html">Saiba mais</a>
                         </div>
@@ -63,7 +63,7 @@
                     <div class="pelucias-conteudo">
                         <h2 class="preco-titulo">Pelúcia Polvo</h2>
                         <p class="preco-valor">R$29.90</p>
-                        <p class="preco-descricao">Pelúcia de polvo em diversas cores, confeccionado artesanalmente em tecido Toronto Super Soft, com enchimento de Silicone Extra Virgem Macio (tufos ou micropérola).</p>
+                        <p class="preco-descricao pelucias-decoracao-2">Pelúcia de polvo em diversas cores, confeccionado artesanalmente em tecido Toronto Super Soft, com enchimento de Silicone Extra Virgem Macio (tufos ou micropérola).</p>
                         <div class="pelucias-botao">
                             <a class="botao" href="./pelucias-polvo.html">Saiba mais</a>
                         </div>
@@ -82,7 +82,7 @@
                     <div class="pelucias-conteudo">
                         <h2 class="preco-titulo">Pelúcia Shiba</h2>
                         <p class="preco-valor">R$59.90</p>
-                        <p class="preco-descricao">Pelúcia de cachorro em diversas cores, confeccionado artesanalmente em tecido Toronto Super Soft, com enchimento de Silicone Extra Virgem Macio (tufos ou micropérola).</p>
+                        <p class="preco-descricao pelucias-decoracao-1">Pelúcia de cachorro em diversas cores, confeccionado artesanalmente em tecido Toronto Super Soft, com enchimento de Silicone Extra Virgem Macio (tufos ou micropérola).</p>
                         <div class="pelucias-botao">
                             <a class="botao" href="./pelucias-cachorro.html">Saiba mais</a>
                         </div>
