--- a/pelucias-urso.html
+++ b/pelucias-urso.html
@@ -41,56 +41,32 @@
             </div>
         </div>
 
-        <main class="pelucias">
-            <div class="pelucias-item-bg">
-                <div class="pelucias-item container">
-                    <div class="pelucias-imagem">
-                        <img src="/img/geral/pelucias-urso.jpg" alt="Pelúcia Urso Marrom">
+        <main class="pelucia">
+            <div class="pelucia-bg container">
+                <div class="pelucia-conteudo">
+                    <div class="pelucia-imagens">
+                        <img src="/img/pelucias/urso-grande.jpg" alt="Urso marrom">
+                        <img src="/img/pelucias/urso-peq-1.jpg" alt="Urso creme">
+                        <img src="/img/pelucias/urso-peq-2.jpg" alt="Urso rosa">
+                        <img src="/img/pelucias/urso-peq-3.jpg" alt="Urso branco">
                     </div>
-                    <div class="pelucias-conteudo">
+                    <div class="pelucia-texto">
                         <h2 class="preco-titulo">Pelúcia Urso</h2>
-                        <p class="preco-valor">R$59.90</p>
-                        <p class="preco-descricao pelucias-decoracao-1">Pelúcia de urso peludo na cor marrom, confeccionado artesanalmente em tecido Toronto Super Soft, com enchimento de Silicone Extra Virgem Macio (tufos ou micropérola).</p>
-                        <div class="pelucias-botao">
-                            <a class="botao" href="./pelucias-urso.html">Saiba mais</a>
+                        <p class="pelucia-desc-1 preco-valor">R$59.90</p>
+                        <p class="pelucia-desc-1 preco-descricao">Pelúcia de urso na cor marrom, confeccionado artesanalmente em tecido Toronto Super Soft, com enchimento de Silicone Extra Virgem Macio (tufos ou micropérola).</p>
+                        <p class="pelucia-desc-1 preco-descricao">Altura: 40cm.</p>
+                        <p class="pelucia-desc-1 preco-descricao"><span>Customização de cores e demais preferências no carrinho: Disponível.</span></p>
+                        <div class="pelucia-botao">
+                            <a class="botao" href="./">Adicionar ao Carrinho</a>
                         </div>
                     </div>
                 </div>
             </div>
-
-            <div class="pelucias-item-bg">
-                <div class="pelucias-item-2 container">
-                    <div class="pelucias-conteudo">
-                        <h2 class="preco-titulo">Pelúcia Polvo</h2>
-                        <p class="preco-valor">R$29.90</p>
-                        <p class="preco-descricao pelucias-decoracao-2">Pelúcia de polvo em diversas cores, confeccionado artesanalmente em tecido Toronto Super Soft, com enchimento de Silicone Extra Virgem Macio (tufos ou micropérola).</p>
-                        <div class="pelucias-botao">
-                            <a class="botao" href="./pelucias-polvo.html">Saiba mais</a>
-                        </div>
-                    </div>
-                    <div class="pelucias-imagem">
-                        <img src="/img/geral/pelucias-polvo.jpg" alt="Pelúcia Polvo Colorido">
-                    </div>
+            <div class="pelucia-extra">
+                <div class="pelucia-extra-bg">
+                    <h3 class="preco-descricao">Dica:</h3>
+                    <p class="preco-descricao">Todas as preferências de cor e maciez podem ser alteradas no Carrinho.</p>
                 </div>
-            </div>
-
-            <div class="pelucias-item-bg">
-                <div class="pelucias-item container">
-                    <div class="pelucias-imagem">
-                        <img src="/img/geral/pelucias-cachorro.jpg" alt="Pelúcia Cachorro">
-                    </div>
-                    <div class="pelucias-conteudo">
-                        <h2 class="preco-titulo">Pelúcia Shiba</h2>
-                        <p class="preco-valor">R$59.90</p>
-                        <p class="preco-descricao pelucias-decoracao-1">Pelúcia de cachorro em diversas cores, confeccionado artesanalmente em tecido Toronto Super Soft, com enchimento de Silicone Extra Virgem Macio (tufos ou micropérola).</p>
-                        <div class="pelucias-botao">
-                            <a class="botao" href="./pelucias-cachorro.html">Saiba mais</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="pelucias-link-bg">
-                <a class="pelucias-link saiba-mais" href="./pelucias.html">Saiba mais</a>
             </div>
         </main>
 
