--- a/termos-condicoes.html
+++ b/termos-condicoes.html
@@ -33,7 +33,7 @@
         </div>
     </header>
 
-    <main class="termos-condicoes">
+    <main class="intro">
         <div class="titulo-intro-bg">
             <div class="titulo-intro container">
                 <p class="subtitulo-intro">Termos de Pedido e Uso</p>
